# jlspot

./: .gitignore  LICENSE.md  README.md  build_tarballs.jl
Spot2/: Manifest.toml  Project.toml
Spot2/src/: Spot2.jl
jlspot/: CMakeLists.txt  jlspot.cpp
spot-2.9.7/: ChangeLog  configure  spot.spec
spot-2.9.7/debian/: changelog
spot-2.9.7/doc/userdoc/: autcross.html  autfilt.html  citing.html  compile.html  concepts.html  csv.html  dstar2tgba.html  genaut.html  genltl.html  hierarchy.html  hoa.html  index.html  install.html  ioltl.html  ltl2tgba.html  ltl2tgta.html  ltlcross.html  ltldo.html  ltlfilt.html  ltlgrind.html  ltlsynt.html  oaut.html  randaut.html  randltl.html  satmin.html  sitemap.html  tools.html  tut.html  tut01.html  tut02.html  tut03.html  tut04.html  tut10.html  tut11.html  tut12.html  tut20.html  tut21.html  tut22.html  tut23.html  tut24.html  (+7 more)
spot-2.9.7/doc/userdoc/man/: autcross.1.html  autfilt.1.html  dstar2tgba.1.html  genaut.1.html  genltl.1.html  ltl2tgba.1.html  ltl2tgta.1.html  ltlcross.1.html  ltldo.1.html  ltlfilt.1.html  ltlgrind.1.html  ltlsynt.1.html  randaut.1.html  randltl.1.html  spot-x.7.html  spot.7.html
spot-julia/: CMakeLists.txt
spot_julia/: CMakeLists.txt  spot_julia.cpp
